# squid-js

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: e2e.yml
apps/client/: index.html  package.json  tsconfig.json  vite.config.ts
apps/client/src/: App.tsx  styles.css
apps/e2e/: package.json  playwright.config.ts
apps/e2e/tests/: compute.spec.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
crates/criterion-shim/: Cargo.toml
crates/criterion-shim/src/: lib.rs
crates/poulpy-napi/: Cargo.toml
crates/poulpy-napi/src/: lib.rs
crates/poulpy-wasm/: Cargo.toml
crates/poulpy-wasm/src/: lib.rs
crates/squid-napi/: Cargo.toml  index.d.ts  index.js  package.json
crates/squid-napi/src/: lib.rs
crates/squid-wasm/: Cargo.toml
crates/squid-wasm/src/: lib.rs
demo/: package.json  vercel.json
demo/scripts/: ensure-demo-ek.mjs  generate-demo-ek.mjs
demo/src/app/: globals.css
demo/src/app/api/session/: route.ts
demo/src/components/: Demo.tsx
demo/src/components/atoms/: Card.tsx  NumberPad.tsx
demo/src/components/steps/: Step1Keygen.tsx  Step2Encrypt.tsx  Step3Evaluate.tsx  Step4Decrypt.tsx
demo/src/hooks/: useFhe.ts
demo/src/lib/: demo-seed.ts  load-demo-evaluator.ts  pending-ek-uploads.ts
tests/: index.spec.ts
