[package]
name = "poulpy-napi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "napi-rs bindings for cedoor/squid (server-side evaluator)."
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
squid = { workspace = true }
napi = { version = "2.16", default-features = false, features = ["napi8"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2"
